[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MultiplayerWinningScene.gd" type="Script" id=1]
[ext_resource path="res://Teko-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/menuList.png" type="Texture" id=3]
[ext_resource path="res://Assets/winning_background.jpg" type="Texture" id=4]
[ext_resource path="res://Assets/close_002.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.505882, 0.6, 1 )

[node name="MultiplayerWinningScene" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="George_Label" type="Label" parent="."]
margin_left = 79.0
margin_top = 90.0
margin_right = 487.0
margin_bottom = 148.0
custom_fonts/font = SubResource( 1 )
text = "George Score: "

[node name="Werewolf_Label" type="Label" parent="."]
margin_left = 79.0
margin_top = 154.0
margin_right = 487.0
margin_bottom = 212.0
custom_fonts/font = SubResource( 1 )
text = "Werewolf Score: "

[node name="Baldric_Label" type="Label" parent="."]
margin_left = 79.0
margin_top = 218.0
margin_right = 487.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 1 )
text = "Baldric Score: "

[node name="Golem_Label" type="Label" parent="."]
margin_left = 79.0
margin_top = 282.0
margin_right = 487.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 1 )
text = "Golem Score: "

[node name="Winner" type="Label" parent="."]
margin_left = 1137.0
margin_top = 101.0
margin_right = 1390.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 3 )
text = "The winner is: "

[node name="Back" type="Button" parent="."]
margin_left = 61.0
margin_top = 975.0
margin_right = 135.0
margin_bottom = 1025.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 4 )
text = "BACK"
icon = ExtResource( 3 )

[node name="ExitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
